--- a/templates/users/basic.html
+++ b/templates/users/basic.html
@@ -75,7 +75,7 @@
       <div class="container">
         <a class="navbar-brand" href="/"
           ><img
-            src="C:\Users\siyan\OneDrive\Desktop\projectnullclass\djnago-bookmyshow-clone-main\djnago-bookmyshow-clone-main\media\movies\logo.jpeg"           
+            src="https://th.bing.com/th/id/ODLS.6228ba87-225e-48b1-92e1-d02dec7f2611?w=32&h=32&qlt=91&pcl=fffffa&o=6&pid=1.2"
             alt="logo"
             height="40"
             width="45"
@@ -141,8 +141,7 @@
           <div class="col-md-4 mb-4 mb-md-0">
             <h5>About Us</h5>
             <p>
-              We provide the best movie experience in town. Book your tickets
-              now and enjoy the show!
+              We provide the best movie experience in town. Book your tickets <br>now and enjoy the show!
             </p>
           </div>
           <div class="col-md-4 mb-4 mb-md-0">
